--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.15, maximum-scale=5.0, user-scalable=yes">
     <title>SimpleChatJS</title>
     <link rel="stylesheet" href="src/css/style.css">
 </head>
