Removed fallbacks, migration, backwards compatibility nonsense
Set minimum defaults for thinking budgets on supported models
Enable thinking by default for supported models

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div id="tokensTab" class="tab-content">
                     <!-- Anthropic Thinking Section -->
                     <div class="settings-section anthropic-thinking-section">
-                        <h3>🧠 Anthropic (Claude) Thinking</h3>
+                        <h3>Anthropic (Claude) Thinking</h3>
                         <div class="checkbox-group">
                             <input type="checkbox" id="enableThinkingAnthropic" />
                             <label for="enableThinkingAnthropic">Enable Thinking Mode</label>
@@ -145,7 +145,7 @@
                     
                     <!-- Google Thinking Section -->
                     <div class="settings-section google-thinking-section">
-                        <h3>💎 Google (Gemini) Thinking</h3>
+                        <h3>Google (Gemini) Thinking</h3>
                         <div class="checkbox-group">
                             <input type="checkbox" id="enableThinkingGoogle" />
                             <label for="enableThinkingGoogle">Enable Thinking Mode</label>
