Fix up some bugs surrounding images, make tools button in main action bar
Uh, what a doozy, so we can now edit in or remove images in any turn
Images are converted to webp making them much smaller footprint than png/jpeg
If an image is too big, we try to convert it to meet a target of 100kb for the base64 version of the image where I seem to successfully be able to talk to gemma3 with images
When sending images only, we send an empty string as the text content
Added a tools button which for now just brings up settings modal in the tools tab
Disable all tools by default, some models can't take it, so we'll let the user enable and try
Image upload controls div becomes 'main-action-bar'

--- a/index.html
+++ b/index.html
@@ -61,14 +61,17 @@
                     <button id="sendBtn" class="send-button">Send</button>
                 </div>
                 
-                <!-- Image upload and preview area -->
+                <!-- File upload and main actions area -->
                 <div id="imageArea" class="image-area">
-                    <div class="image-upload-controls">
+                    <div class="main-action-bar">
                         <input type="file" id="imageInput" accept="image/*" multiple style="display: none;">
                         <button id="addImageBtn" class="add-image-btn" title="Add images">
                             <span>📎</span>
                         </button>
-                        <span class="image-hint">Drop, paste, or click to add images</span>
+                        <button id="toolsBtn" class="tools-btn" title="Manage tools">
+                            <span>🔧</span>
+                        </button>
+                        <span class="action-hint">Drop, paste, or click to add files</span>
                     </div>
                     <div id="imagePreviews" class="image-previews"></div>
                 </div>
@@ -297,6 +300,7 @@
     <!-- Core app utilities -->
     <script src="src/js/app/logger.js"></script>
     <script src="src/js/app/utils.js"></script>
+    <script src="src/js/app/imageProcessing.js"></script>
     <script src="src/js/app/api.js"></script>
     
     <!-- Rendering system -->
