Introduce SimpleSyntax, a code highlighter for our new codeblocks
SimpleSyntax is a temu Prism.js

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.15, maximum-scale=5.0, user-scalable=yes">
     <title>SimpleChatJS</title>
     <link rel="stylesheet" href="src/css/style.css">
+    <link rel="stylesheet" href="src/css/syntax.css">
+    
 </head>
 <body>
     <div class="aim-container">
@@ -329,6 +331,7 @@
     <script src="src/js/chat/chatManager.js"></script>
     
     <!-- Main application -->
+    <script src="src/js/utils/simpleSyntax.js"></script>
     <script src="src/js/app/main.js"></script>
 </body>
 </html>
