--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="chat-sidebar">
             <div class="sidebar-header">
                 <div class="user-info">
-                    <div class="user-name">SimpleChat User</div>
+                    <div class="user-name">SimpleChatJS User</div>
                     <div class="user-status">Online</div>
                 </div>
             </div>
