Create Electron context menu, icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>SimpleChatJS</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/syntax.css">
+    <link rel="stylesheet" href="src/css/context-menu.css">
     
 </head>
 <body>
@@ -323,6 +324,7 @@
     <script src="src/js/ui/debugPanel.js"></script>
     <script src="src/js/ui/settings.js"></script>
     <script src="src/js/ui/ui.js"></script>
+    <script src="src/js/ui/contextMenu.js"></script>
     
     <!-- Chat functionality -->
     <script src="src/js/chat/conductorDebugData.js"></script>
